added images, modified index and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         </nav>
     </header>
     <section>
-        <p>Be a part of excellence, innovation, and determination and help us create and deliver novel customer experiences.
+        <table class="imageGallery">
+            <tr>
+                <td><img src="imagePortal1.jpg" height="250" width="300"></td>
+                <td><img src="imagePortal2.jpg" height="250" width="300"></td>
+            </tr>
+        </table>
+        <p>This website is a portal providing access or links to other sites related to Software Testing
         </p>
     </section>
     <footer class="myFooter">
