added para in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </table>
         <p>This website is a portal providing access or links to other sites related to Software Testing
         </p>
+        <p>One stop for accessing all files for testing concepts
+        </p>
     </section>
     <footer class="myFooter">
         This page is designed by Forum Rathod
